--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
               <li class="navigation__item"><a href="{{ site.baseurl }}/contact" title="link to {{ site.title }} blog" class="blog-button">Kontakt</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/membership" title="link to {{ site.title }} blog" class="blog-button">Członkostwo</a></li>
               <li class="navigation__item"><a href="{{ site.baseurl }}/calendar" title="link to {{ site.title }} blog" class="blog-button">Kalendarz</a></li>
+              <li class="navigation__item"><a href="{{ site.baseurl }}/hackathon" title="Hackathon świąteczny" class="blog-button"><img src="/images/snowflake.png" style="margin:-5px 5px -6px -5px">Hackathon świąteczny</a></li>
               <li class="navigation__item"><a href="http://hs3wiki.pl" title="link to {{ site.title }} blog" class="blog-button">Wiki</a></li>
             </ul>
           </nav>
