--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,4 +6,4 @@ layout: default
 <div>
     <img class="logo" src="{{ site.wikiurl }}/_media/promo/hs_logo_color_trojmiasto.png">
 </div>
-<div class="stub-or-idk">{{ content }}</div>
+<div class="content">{{ content }}</div>
