--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
 
     </section>
     <section class="footer__notice">
-        <p>{{ site.copyright }}</p>
+        <p>&#9400; HackerSpace Trójmiasto.</p>
+        <p>Nie działa? <a href="">Zgłoś błąd.</a></p>
     </section>
 </footer>
