footer finished styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer>
     <section class="footer__navigation">
-
         <a href="{{ site.baseurl }}/">
-            <img src="" alt="HS">
+            <img src="http://via.placeholder.com/50x50" alt="HS">
         </a>
-        <nav>
+
+        <nav class="navigation">
             {% include nav-links.html menu=site.menus.header %}
         </nav>
         <nav class="socials">
@@ -12,8 +12,11 @@
         </nav>
 
     </section>
+    
     <section class="footer__notice">
         <p>&#9400; HackerSpace Trójmiasto.</p>
-        <p>Nie działa? <a href="">Zgłoś błąd.</a></p>
+        <p>Nie działa?
+            <a href="#">Zgłoś błąd.</a>
+        </p>
     </section>
 </footer>
