--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -9,3 +9,5 @@ $font-family: "Inconsolata", serif;
 $white: #ffffff;
 $cool-grey: #1b1b1b;
 $coolest-grey: #212121;
+$hacker-red: #ff0000;
+$cracker-red: #bb0000;
