added small logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <section class="footer__navigation">
         <a href="{{ site.baseurl }}/">
-            <img src="http://via.placeholder.com/50x50" alt="HS">
+            <img src="/assets/50x50_logo_small.png" alt="HS">
         </a>
 
         <nav class="navigation">
