--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,7 @@
         <p>&#9400; Hackerspace Trójmiasto.</p>
         <p>Nie działa?
             <a href="https://github.com/hs3city/hs3city.github.io/issues">Zgłoś błąd.</a>
+            <a href="https://github.com/hs3city/hs3city.github.io/compare">Albo napraw.</a>
         </p>
     </section>
 </footer>
