--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -11,3 +11,12 @@ $cool-grey: #1b1b1b;
 $coolest-grey: #212121;
 $hacker-red: #ff0000;
 $cracker-red: #bb0000;
+
+/*
+=============================================================
+                        ** BREAKPOINTS **
+=============================================================
+*/
+
+$phone-width: 577px;
+$tablet-width: 769px;
