--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
 @import "common/variables";
+@import "common/mixins";
 @import "partials/header";
 @import "partials/footer";
 @import "views/landing";
