--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,45 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
 @import "common/variables";
 @import "common/mixins";
+@import "common/global";
 @import "partials/header";
 @import "partials/footer";
 @import "views/landing";
 @import "views/contact";
-
-* {
-    font-family: $font-family;
-}
-
-body {
-    background-color: #111111;
-    color: white;
-    margin: 0;
-
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-a {
-    color: $white;
-    text-decoration: underline;
-
-    &:hover {
-        color: $hacker-red;
-    }
-
-    &:active {
-        color: #bb0000;
-    }
-}
-
-.container {
-	padding: 3em;
-    img {
-        max-width: 100%;
-    }
-}
-
-main {
-    margin-bottom: 2em;
-}
