--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,9 @@
-<header>
-    <div class="nav">
-        {% if page.url == "/" %}
-            <nav style="float:left;">
-                {% include nav-links.html menu=site.menus.quick %}
-            </nav>
-        {% else %}
-            <a href="{{ site.baseurl }}/"><img class="header__logo" src="/assets/logo_white_small.png" alt="small logo"></a>
-        {% endif %}
+ {% if page.url == "/" %}
+<nav class="page-navigation">{% include nav-links.html menu=site.menus.quick %}</nav>
+{% else %}
+<a href="{{ site.baseurl }}/">
+    <img class="header__logo" src="/assets/logo_white_small.png" alt="small logo">
+</a>
+{% endif %}
 
-        <nav style="float:right;">
-            {% include nav-links.html menu=site.menus.header %}
-        </nav>
-    </div>
-</header>
+<nav class="page-navigation">{% include nav-links.html menu=site.menus.header %}</nav>
