--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -9,6 +9,7 @@ $font-family: "Inconsolata", serif;
 $white: #ffffff;
 $cool-grey: #1b1b1b;
 $coolest-grey: #212121;
+$hacker-background: #111111;
 $hacker-red: #ff0000;
 $cracker-red: #bb0000;
 
