--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -1,4 +1,5 @@
 $font-family: "Inconsolata", serif;
+$font-family-2: "Lato", serif;
 
 /*
 =============================================================-
