--- a/_sass/common/_mixins.scss
+++ b/_sass/common/_mixins.scss
@@ -1,3 +1,8 @@
+
+/*======================================================================
+                            RWD breakpoints
+=======================================================================*/
+
 @mixin phone() {
     @media only screen and (max-width: $phone-width) {
         @content;
@@ -29,3 +34,8 @@
         @content;
     }
 }
+
+/*======================================================================
+                            typography mixins
+=======================================================================*/
+
