--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <section class="footer__notice">
-        <p>&#9400; Hackerspace Trójmiasto.</p>
+        <p>(K) All Rights Reversed</p>
         <p>Nie działa?
             <a href="https://github.com/hs3city/hs3city.github.io/issues">Zgłoś błąd.</a>
         </p>
