--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -2,8 +2,12 @@
 layout: default
 ---
 
-<main class="container">
-	<h1>{{ page.title }}</h1>
+<main class="container event">
+	{% if page.banner == blank %}
+	    <h1>{{ page.title }}</h1>
+	{% else %}
+	    <img src="{{ page.banner }}" alt="{{ page.title }}" class="banner">
+	{% endif %}
 	<h4>{{ page.date | date: "%Y-%m-%d" }}</h4>
 	{{ content }}
 </main>
