--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -42,11 +42,25 @@ a {
 }
 
 .container {
-	padding: 3em;
+    padding: 3em;
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
+
     img {
         max-width: 100%;
     }
-}
+  }
+  @media #{$medium-and-up} {
+    .container {
+      width: 85%;
+    }
+  }
+  @media #{$large-and-up} {
+    .container {
+      width: 70%;
+    }
+  }
 
 main {
     margin-bottom: 2em;
