add whois widget to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,5 +4,8 @@
         <p>Nie działa?
             <a href="https://github.com/hs3city/hs3city.github.io/issues">Zgłoś błąd.</a>
         </p>
+        <p id="whois">
+            <script src="/assets/whois.js" async></script> 
+        </p>
     </section>
 </footer>
