--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -30,8 +30,10 @@ footer {
         flex-wrap: wrap;
         justify-content: center;
         background-color: $coolest-grey;
+
         p {
             display: inline-block;
+            padding: 15px;
             &:after {
                 content: "";
                 position: absolute;
