style .container instead of main, should fix reCaptcha

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: meta
 	<main class="landing">
 		
 		
-	<div class="thing">
+	<div class="container">
 		<div class="logo">
 		    <img src="/assets/logo_white_full.png">
 		</div>
