--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -42,14 +42,14 @@ a {
 }
 
 .container {
-	padding: 3em;
+    max-width: 100ch;
+    padding: 2ch;
+    margin: auto;
     img {
         max-width: 100%;
     }
 }
 
 main {
-    max-width: 100ch;
-    padding: 2ch;
-    margin: auto;
+    width: 100%;
 }
