--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-<main class="container event">
+<main>
+	<div class="container event">
 	{% if page.banner == blank %}
 	    <h1>{{ page.title }}</h1>
 	{% else %}
@@ -10,4 +11,5 @@ layout: default
 	{% endif %}
 	<h4>{{ page.date | date: "%Y-%m-%d" }}</h4>
 	{{ content }}
+	</div>
 </main>
