--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,7 @@ layout: meta
 <body class="landing_svg">
     {% include header.html %}
 	<main class="landing">
-		
-		
-	<div class="container">
+	<div class="thing">
 		<div class="logo">
 		    <img src="/assets/logo_white_full.png">
 		</div>
