--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" type="text/css" href="/assets/normalize.css">
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
+
+    <script src="/assets/whois.js" async></script> 
 </head>
 {{ content }}
 </html>
