--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <main>
 	<div class="container">
-	<h1>{{ page.title }}</h1>
-	{{ content }}
-	</div>div>
+		<h1>{{ page.title }}</h1>
+		{{ content }}
+	</div>
 </main>
