pin posts to homepage; pin IKM

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,7 @@ layout: meta
 			{{ content }}
 		</div>
 		<div class="landing__cta" ><a href="/about">czytaj_więcej();</a></div>
+	{% include posts.html %}
 	</div>
 	</main>
     {% include footer.html %}
