--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,12 @@ layout: default
 
 <main>
     <div class="container">
-        <h1>{{ page.title }}</h1>
-        {{ content }}
+        {% if page.banner == blank %}
+	    <h1>{{ page.title }}</h1>
+	    {% else %}
+	    <img src="{{ page.banner }}" alt="{{ page.title }}" class="banner">
+	    {% endif %}
+	    <h4>{{ page.date | date: "%Y-%m-%d" }}</h4>
+	    {{ content }}
     </div>
 </main>
