--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,10 @@ layout: default
 
 <main>
     <div class="container">
-        {% if page.banner == blank %}
-	    <h1>{{ page.title }}</h1>
+		{% if page.banner %}
+		<img src="{{ page.banner }}" alt="{{ page.title }}" class="banner">
 	    {% else %}
-	    <img src="{{ page.banner }}" alt="{{ page.title }}" class="banner">
+	    <h1>{{ page.title }}</h1>
 	    {% endif %}
 	    <h4>{{ page.date | date: "%Y-%m-%d" }}</h4>
 	    {{ content }}
