center alert message

--- a/_includes/notice.html
+++ b/_includes/notice.html
@@ -3,9 +3,8 @@
     {% if post.categories contains "notice" %} 
     {% if post.pinned == true %}
     {% unless page.url == post.url %}
-    <div class="alert alert-{{ post.alert }}" role="alert">
-        <p><b>{{ post.title }}</b> – {{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }} </p>
-        <p>->&nbsp;<a href="{{ post.url }}">więcej</a></p>
+    <div class="alert alert-{{ post.alert }} center" role="alert">
+        <p><b>{{ post.title }}</b> – {{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }} ->&nbsp;<a href="{{ post.url }}">więcej();</a></p>
     </div>
     {% endunless %}
     {% endif %} 
