--- a/2020/fow-5/css/style.css
+++ b/2020/fow-5/css/style.css
@@ -590,19 +590,36 @@ html, body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+}
+
+.video__embed {
+    width: 100%;
+    text-align: center;
+    order: -1;
+}
+
+.video__embed iframe {
+    width: 100%;
+    max-width: 560px;
 }
 
 .video__arrow {
     color: #fff;
     font-size: 2rem;
-    margin: 0 2rem;
+    margin: 1rem 0rem;
+
+    min-width: 3rem;
+    min-height: 3rem;
     width: 3rem;
     height: 3rem;
     line-height: 3rem;
+
     text-align: center;
     border-radius: 100%;
     background-color:#cbecb7;
     cursor: pointer;
+
     transition: background 0.6s;
     transition-property: background;
     transition-duration: 0.6s;
@@ -611,6 +628,13 @@ html, body {
 }
 .video__arrow:hover {
     background-color:#96d86c;
+}
+
+.arrow__prev {
+    border-radius: 100% 0 0 100%;
+}
+.arrow__next {
+    border-radius: 0 100% 100% 0;
 }
 
 /* event */
@@ -992,6 +1016,25 @@ html, body {
     /* term */
     .section__paragraph--term {
         font-size: 1.5rem;
+    }
+
+    
+    /* video */
+    .section__video {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .video__embed {
+        width: auto;
+        /* min-width: 560px; */
+        order: 0;
+    }
+    
+    .video__embed iframe {
+        min-width: 560px;
     }
 
     /* event */
