rename css paths, parametrize hacker colors, move notice style to separate file

--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -15,7 +15,7 @@ header nav {
     }
     a::after {
         content: " |";
-        color: red;
+        color: $hacker-color;
     }
     a:first-child::before {
         content: "[ ";
