--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -10,5 +10,5 @@ $white: #ffffff;
 $bg-grey: #111111;
 $cool-grey: #1b1b1b;
 $coolest-grey: #212121;
-$hacker-red: #ff0000;
-$cracker-red: #bb0000;
+$hacker-color: #ff0000;
+$cracker-color: #bb0000;
