--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -4,8 +4,20 @@
     <title>{{ page.title }} | {{ site.title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Hackerspace to społeczność i miejsce dla ludzi, którym po prostu się chce!">
+    
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/hsp-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/pixel-hsp.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#737373">
 
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#000000">
+    
+    <link rel="preload" as="image" href="/assets/hsp-gray.png">  
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Inconsolata">
+
     <link rel="stylesheet" type="text/css" href="/assets/normalize.css">
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
 
