--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -30,6 +30,8 @@ layout: default
 <section class="contact__info">
 	<div class="container">
 		{{ content }}
+
+		{% include location-map.html %}
 	</div>
 </section>
 </main>
