--- a/_sass/layouts/_home.scss
+++ b/_sass/layouts/_home.scss
@@ -22,8 +22,9 @@
 		justify-content: center;
 		img {
 			width: -webkit-fill-available;
-		    max-width: 500px;
-		    height: 100%;
+		    max-width: 128px;
+			height: 100%;
+			margin: auto;
 		}
 	}
 
