--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <section class="footer__notice">
         <p>(K) All Rights Reversed</p>
         <p>Nie działa?
-            <a href="https://github.com/hs3city/hs3city.github.io/issues">Zgłoś błąd.</a>
+            <a href="https://github.com/hspsh/hsp.sh/issues">Zgłoś błąd.</a>
         </p>
         <p id="whois"></p>
     </section>
