--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 {% include nav-links.html menu=site.menus.quick %}
             </nav>
         {% else %}
-            <a href="{{ site.baseurl }}/"><img class="header__logo" src="/assets/logo_white_small.png" alt="home page"></a>
+            <a href="{{ site.baseurl }}/"><img class="header__logo" src="/assets/hsp-gray.png" alt="home page"></a>
         {% endif %}
 
         <nav style="float:right;">
