--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,11 +5,12 @@ layout: meta
     {% include header.html %}
 	{% include notice.html %}
 	<main class="landing">
-	<div class="thing">
+	<div class="thing">		
 		<div class="logo">
-		    <img src="/assets/logo_white_full.png">
+			<img src="/assets/hsp-gray.png">
 		</div>
 		<div class="content">
+			<center><h1>Hackerspace Pomorze</h1></center>
 			{{ content }}
 		</div>
 		<div class="landing__cta" ><a href="/about">czytaj_więcej();</a></div>
