--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -3,12 +3,13 @@ header {
 }
 
 .header__logo {
-        height: 1em;
-    }
+    height: 1.5em;
+}
+
 
 header nav {
     text-transform: lowercase;
-
+    display: inline
     a {
         color: white;
         text-decoration: none;
@@ -19,10 +20,10 @@ header nav {
     }
     a:first-child::before {
         content: "[ ";
-        color: white;
+        color: $hacker-color;
     }
     a:last-child::after {
         content: " ]";
-        color: white;
+        color: $hacker-color;
     }
 }
