--- a/_includes/location-map.html
+++ b/_includes/location-map.html
@@ -7,8 +7,8 @@
 
     <style>
         #map {
-            height: 180px;
-            width: 300px
+            padding-bottom: 56.25%;
+            width: 100%
         }
 
         @media screen and (max-width: 400px) {
