--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: meta
 			<img src="/assets/hsp-gray.png">
 		</div>
 		<div class="content">
-			<center><h1>Hackerspace Pomorze</h1></center>
+			<center><h1><a>H</a>acker<a>s</a>pace <a>P</a>omorze</h1></center>
 			{{ content }}
 		</div>
 		<div class="landing__cta" ><a href="/about">czytaj_więcej();</a></div>
