--- a/_includes/notice.html
+++ b/_includes/notice.html
@@ -4,7 +4,7 @@
     {% if post.pinned == true %}
     {% unless page.url == post.url %}
     <div class="alert alert-{{ post.alert }} center" role="alert">
-        <p><b>{{ post.title }}</b> – {{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }} ->&nbsp;<a href="{{ post.url }}">więcej();</a></p>
+        <p><b>{{ post.title }}</b> ->&nbsp;<a href="{{ post.url }}">więcej();</a></p>
     </div>
     {% endunless %}
     {% endif %} 
