--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,12 +5,12 @@ layout: meta
     {% include header.html %}
 	{% include notice.html %}
 	<main class="landing">
-	<div class="thing">		
+	<div class="brand">		
 		<div class="logo">
 			<img src="/assets/hsp-gray.png">
 			<span><h1><a>H</a>acker<a>s</a>pace <a>P</a>omorze</h1></span>
 		</div>
-		<p id="slogan">Restartujemy Hackerspace. Nowa nazwa. Nowy adres. Ci sami ludzie.</p>
+		<p class="slogan">Restartujemy Hackerspace. Nowa nazwa. Nowy adres. Ci sami ludzie.</p>
 		<div class="content">
 			{{ content }}
 		</div>
