--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: meta
 	<div class="brand">		
 		<div class="logo">
 			<img src="/assets/hsp-gray.png">
-			<span><h1><a>H</a>acker<a>s</a>pace <a>P</a>omorze</h1></span>
+			<span><h1>Hackerspace Pomorze</h1></span>
 		</div>
 		<p class="slogan">Restartujemy Hackerspace. Nowa nazwa. Nowy adres. Ci sami ludzie.</p>
 		<div class="content">
