smarter HTML / CSS hierarchy

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,16 +4,16 @@ layout: meta
 <body class="landing_svg">
     {% include header.html %}
 	{% include notice.html %}
-	<main class="landing">
+	<main class="container">
 	<div class="brand">		
 		<div class="logo">
 			<img src="/assets/hsp-gray.png">
 			<span><h1><a>H</a>acker<a>s</a>pace <a>P</a>omorze</h1></span>
 		</div>
 		<p class="slogan">Restartujemy Hackerspace. Nowa nazwa. Nowy adres. Ci sami ludzie.</p>
-		<div class="content">
-			{{ content }}
-		</div>
+	</div>
+	<div class="content">
+		{{ content }}
 	</div>
 	</main>
     {% include footer.html %}
