add spinner background to all pages

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: meta
 ---
-<body class="landing_svg">
+<body>
     {% include header.html %}
 	{% include notice.html %}
 	<main class="container">
