--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer>
     <section class="footer__notice">
         <p>(K) All Rights Reversed</p>
+        <p><a href="/assets/status_hsp.pdf" target="_blank">Statut Stowarzyszenia</a></p>
         <p>Nie działa?
-            <a href="https://github.com/hs3city/hs3city.github.io/issues">Zgłoś błąd.</a>
+            <a href="https://github.com/hspsh/hsp.sh/issues">Zgłoś błąd.</a>
         </p>
         <p id="whois"></p>
     </section>
