--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,6 +22,10 @@ body {
     fill: #212121;
 }
 
+main {
+    overflow-x: hidden;
+}
+
 a {
     color: $white;
     text-decoration: underline;
@@ -50,10 +54,9 @@ a {
     img {
         max-width: 100%;
     }
-}
-
-main {
-    width: 100%;
+    p {
+        text-align: justify;
+    }
 }
 
 .center {
