--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -16,6 +16,11 @@
     <meta name="msapplication-TileColor" content="#00cc99">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#00cc99">
+
+    <meta property="og:url" content="https://hsp.sh/">
+    <meta property="og:description" content="Hackerspace to społeczność i miejsce dla ludzi, którym po prostu się chce!">
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:image" content="https://hsp.sh/assets/images/hspomorze/banner.png">
     
     <link rel="preload" as="image" href="/assets/hsp-gray.png">  
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Inconsolata">
