--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -22,6 +22,11 @@
     <meta property="og:title" content="{{ site.title }}">
     <meta property="og:image" content="https://hsp.sh/assets/images/hspomorze/banner.png">
     
+    <meta property="twitter:description" content="Hackerspace to społeczność i miejsce dla ludzi, którym po prostu się chce!">
+    <meta property="twitter:title" content="{{ site.title }}">
+    <meta property="twitter:image" content="https://hsp.sh/assets/images/hspomorze/banner.png">
+    <meta property="twitter:card" content="summary">
+    
     <link rel="preload" as="image" href="/assets/hsp-gray.png">  
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Inconsolata">
 
