--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -4,7 +4,7 @@
     <title>{{ page.title }} | {{ site.title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Hackerspace to społeczność i miejsce dla ludzi, którym po prostu się chce!">
+    <meta name="description" content="{{ site.description }}">
     
     <link rel="manifest" href="/manifest.json">
 
@@ -18,13 +18,13 @@
     <meta name="theme-color" content="#00cc99">
 
     <meta property="og:url" content="https://hsp.sh/">
-    <meta property="og:description" content="Hackerspace to społeczność i miejsce dla ludzi, którym po prostu się chce!">
-    <meta property="og:title" content="{{ site.title }}">
-    <meta property="og:image" content="https://hsp.sh/assets/images/hspomorze/banner.png">
+    <meta property="og:description" content="{{ page.description | site.description}}">
+    <meta property="og:title" content="{{ page.title }} | {{ site.title }}">
+    <meta property="og:image" content="{{ page.banner | site.banner }}">
     
-    <meta property="twitter:description" content="Hackerspace to społeczność i miejsce dla ludzi, którym po prostu się chce!">
-    <meta property="twitter:title" content="{{ site.title }}">
-    <meta property="twitter:image" content="https://hsp.sh/assets/images/hspomorze/banner.png">
+    <meta property="twitter:description" content="{{ page.description | site.description}}">
+    <meta property="twitter:title" content="{{ page.title }} | {{ site.title }}">
+    <meta property="twitter:image" content="{{ page.banner | site.banner }}">
     <meta property="twitter:card" content="summary">
     
     <link rel="preload" as="image" href="/assets/hsp-gray.png">  
