hotfix metatag page url

--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#00cc99">
 
-    <meta property="og:url" content="https://hsp.sh/">
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:title" content="{{ page.title }} | {{ site.title }}">
     <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:image" content="{% if page.banner %}{{ page.banner }}{% else %}{{ site.banner }}{% endif %}">
