Use a proxied Plausible script

--- a/_layouts/meta.html
+++ b/_layouts/meta.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
 
     <script src="/assets/whois.js" async></script>
-    <script async defer data-domain="hsp.sh" src="https://plausible.at.hsp.sh/js/plausible.js"></script>
+    <script async defer data-domain="hsp.sh" src="https://plausible.at.hsp.sh/js/script.js"></script>
 </head>
 {{ content }}
 </html>
